--- a/PrivacyAlbum/Info.plist
+++ b/PrivacyAlbum/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>app使用相机</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>app访问相册</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
